--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,10 @@ jobs:
       - checkout
       - run:
           name: EKK Stack - Set up Terraform
-          command: cd terraform/test && terraform init -backend=false
+          command: cd terraform/modules/member_account && terraform init -backend=false
       - run:
           name: EKK Stack - Validate Terraform
-          command: cd terraform/test && terraform validate -check-variables=false
+          command: cd terraform/modules/member_account && terraform validate -check-variables=false
 
 workflows:
   version: 2
