--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - checkout
       - run:
-          name: EKK Stack - Set up Terraform
+          name: Set up Terraform
           command: cd terraform/modules/member_account && terraform init -backend=false
       - run:
-          name: EKK Stack - Validate Terraform
+          name: Validate Terraform
           command: cd terraform/modules/member_account && terraform validate -check-variables=false
 
 workflows:
