--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
           name: Validate Terraform
           command: cd terraform/modules/member_account && terraform validate -check-variables=false
       - run:
-          name: Install pip
-          command: curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python get-pip.py
+          name: Install python
+          command: apt-get install python3
       - run:
           name: Install Terrascan
           command: pip install terrascan
