--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,21 @@
 version: 2
 jobs:
-  build:
+  validate:
     docker:
       - image: hashicorp/terraform
-        environment:
-          AWS_DEFAULT_REGION: us-east-1
     steps:
       - checkout
       - run:
           name: Set up Terraform
           command: cd terraform/modules/member_account && terraform init -backend=false
+
       - run:
           name: Validate Terraform
           command: cd terraform/modules/member_account && terraform validate -check-variables=false
+
+workflows:
+    version: 2
+
+    validate:
+      jobs:
+        - validate
